Col-4 event height fix, footer z-index fix

--- a/css/style.less
+++ b/css/style.less
@@ -720,12 +720,12 @@
 				grid-row-end: 3;
 				grid-column-start: 3;
 				grid-column-end: 5;
+				max-height: 520px;
 			}
 
 			@media @col-5 {
 				grid-column-start: 4;
 				grid-column-end: 6;
-				max-height: 520px;
 			}
 
 			@media @col-6 {
@@ -897,7 +897,7 @@
 
 		&_bottom-sticked-fixed {
 			@media @col-4 {
-				z-index: 2;
+				z-index: 4;
 				position: fixed;
 				bottom: -412px;
 
